data/derived/comb/progs/unify/prog4543.ml.out
Characters 67-81:
  | head::tail -> head + (sumList tail);;
                         ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
